# cxx_std_test

./: CMakeLists.txt
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
tests/: CMakeLists.txt  unit-standard.cpp
